.provarCaches/00D410000011HE0EAM/objects/rstkf__gltype__c.object
<CustomObject>
    <description>gltype__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <description>externalid__c</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__gltype_cmpno__r.rstkf__externalid__c + rstkf__gltype_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__gltype_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltype_accttype__c</fullName>
        <description>gltype_accttype__c</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Operating Expenses</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Liabilities</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Other Comprehensive Income</fullName>
                </value>
                <value>
                    <fullName>Cost of Goods Sold</fullName>
                </value>
                <value>
                    <fullName>Other Income (Expense)</fullName>
                </value>
                <value>
                    <fullName>Tax Provision (Benefit)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__gltype_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>gltype_cmpno__c</description>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipName>gltypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltype_fromacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>gltype_fromacct__c</description>
        <label>Account Range From</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipName>gltypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltype_glstmttype__c</fullName>
        <description>gltype_glstmttype__c</description>
        <label>IFR Statement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Income Statement</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__gltype_gltxnlistfieldset__c</fullName>
        <label>GL Txn Inquiry Detail Field Set</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltype_normalbal__c</fullName>
        <description>gltype_normalbal__c</description>
        <label>Normal Balance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__gltype_toacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>gltype_toacct__c</description>
        <label>Account Range To</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipName>gltypesto</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltype_type__c</fullName>
        <description>gltype_type__c</description>
        <label>GL Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions__c</description>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <listViews>
        <fullName>GL_Account_Type_MM_100</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gltype_cmpno__c</columns>
        <columns>rstkf__gltype_type__c</columns>
        <columns>rstkf__gltype_glstmttype__c</columns>
        <columns>rstkf__gltype_fromacct__c</columns>
        <columns>rstkf__gltype_toacct__c</columns>
        <columns>rstkf__gltype_accttype__c</columns>
        <columns>rstkf__gltype_normalbal__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__gltype_cmpno__c</field>
            <operation>contains</operation>
            <value>Mountain</value>
        </filters>
        <label>GL Account Type MM(100)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gltype_cmpno__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_GL_Account_Type</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gltype_cmpno__c</columns>
        <columns>rstkf__gltype_type__c</columns>
        <columns>rstkf__gltype_glstmttype__c</columns>
        <columns>rstkf__gltype_fromacct__c</columns>
        <columns>rstkf__gltype_toacct__c</columns>
        <columns>rstkf__gltype_accttype__c</columns>
        <columns>rstkf__gltype_normalbal__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__gltype_cmpno__c</field>
            <operation>contains</operation>
            <value>Mountain</value>
        </filters>
        <label>GL Account Type</label>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_GL_Account_Type_ROD</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gltype_cmpno__c</columns>
        <columns>rstkf__gltype_type__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__gltype_cmpno__c</field>
            <operation>contains</operation>
            <value>western</value>
        </filters>
        <label>GL Account Type - ROD</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_OBSOLETE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>